# ech-auth-interop

./: .gitignore  COMPLIANCE.md  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
docs/: DEMO.md
go/: compat_test.go  config.go  config_test.go  e2e_test.go  echauth.go  echauth_test.go  encoding.go  go.mod  integration_test.go  interop_test.go  pkix.go  pkix_test.go  signed_ech_test.go  trace_gen_test.go  trust.go  trust_test.go
go/cmd/ech-auth/: main.go
go/cmd/split-test/: main.go
interop/: README.md  generate-vectors.py  harness.go  harness.py  run_matrix.sh
nss/: DOCKER_TESTING.md  Dockerfile  Makefile  README.md  build-and-test.sh  echauth_client.c  generate-test-vectors.sh  interop_test.c  nss_echauth.patch  parse_test_vectors.py  test-interop-docker.sh  tls13echauth.c  tls13echauth.h  tls13echauth_test.c
rust/: Cargo.toml  README.md
rust/examples/: client_trust_model.rs  low_level_verification.rs  pkix_validation.rs  retry_config_handling.rs  server_signing.rs
rust/src/: codec.rs  ech_config.rs  error.rs  lib.rs  sign.rs  trust.rs  types.rs  verify.rs
test-vectors/: cert.pem  ech_key.pem  interop.json  schema.json  signing_key.pem
